tests/rosetta/out/Fortran/convert-seconds-to-compound-duration.f90
! Generated by Mochi compiler v0.10.28 on 2006-01-02T15:04:05Z
program convert_seconds_to_compound_duration
  implicit none
    integer :: wks
    integer :: ds
    integer :: hrs
    integer :: mins
    character(len=100) :: res
    logical :: comma
      character(len=100) :: s0
      character(len=100) :: s1
      character(len=100) :: s2
      character(len=100) :: s3
      character(len=100) :: s4
  print *, timeStr(7259)
  print *, timeStr(86400)
  print *, timeStr(6000000)
  
  contains
  recursive character(len=100) function timeStr(sec) result(res)
    integer, intent(in) :: sec
    wks = (sec / 604800)
    sec = mod(sec,604800)
    ds = (sec / 86400)
    sec = mod(sec,86400)
    hrs = (sec / 3600)
    sec = mod(sec,3600)
    mins = (sec / 60)
    sec = mod(sec,60)
    res = ''
    comma = .false.
    if ((wks /= 0)) then
      write(s0,'(G0)') wks
      res = (res + s0) // ' wk'
      comma = .true.
    end if
    if ((ds /= 0)) then
      if (comma) then
        res = res // ', '
      end if
      write(s1,'(G0)') ds
      res = (res + s1) // ' d'
      comma = .true.
    end if
    if ((hrs /= 0)) then
      if (comma) then
        res = res // ', '
      end if
      write(s2,'(G0)') hrs
      res = (res + s2) // ' hr'
      comma = .true.
    end if
    if ((mins /= 0)) then
      if (comma) then
        res = res // ', '
      end if
      write(s3,'(G0)') mins
      res = (res + s3) // ' min'
      comma = .true.
    end if
    if ((sec /= 0)) then
      if (comma) then
        res = res // ', '
      end if
      write(s4,'(G0)') sec
      res = (res + s4) // ' sec'
    end if
    res = res
    return
  end function timeStr
end program convert_seconds_to_compound_duration
